# aliengo_sdk

./: CMakeLists.txt  ChangeLog.md  README.md
examples/: high_lcm_server.cpp  lcm_server.cpp  low_lcm_server.cpp  position_example.cpp  torque_example.cpp  velocity_example.cpp  walk_example.cpp
include/aliengo_sdk/: aliengo_sdk.hpp  comm.hpp  control.hpp  lcm.hpp  lcm_server.hpp  loop.hpp  robot_const.hpp  udp.hpp
